# sbar

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/components/: battery.rs  exec.rs  memory.rs  mod.rs  temp.rs  time.rs
