[package]
name = "sbar"
version = "0.2.2"
edition = "2021"
documentation = "https://github.com/sleepntsheep/sbar"
description = "A modular, async bar for dwm"
readme = "README.md"
homepage = "https://github.com/sleepntsheep/sbar"
license-file = "LICENSE"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ffi = "0.0.2"
getopts = "0.2.21"
libc = "0.2.126"
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.25"
signal-hook = "0.3.14"
sysinfo = "0.24.6"
tokio = { version = "1.19.2", features = ["full"] }
x11 = { version = "2.19.1", features = ["xlib"] }
