[package]
name = "sbar"
version = "0.7.6"
edition = "2021"
documentation = "https://github.com/sleepntsheep/sbar"
description = "A modular, async bar for dwm"
readme = "README.md"
homepage = "https://github.com/sleepntsheep/sbar"
license-file = "LICENSE"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
ffi = "0.0.2"
futures = "0.3.21"
getopts = "0.2.21"
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.25"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sysinfo = "0.24.6"
tokio = { version = "1.19.2", features = ["full", "time"] }
x11 = { version = "2.19.1", features = ["xlib"] }
